--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -19,7 +19,7 @@
 
     </div>
 
-    <ng-container *ngIf="bookslist !== null; else noBooks">
+    <ng-container *ngIf="bookslist$ !== null; else noBooks">
       <p [ngStyle]="{color: getColor()}"></p>
 
 
@@ -49,7 +49,7 @@
         </thead>
         <tbody>
 
-        <tr *ngFor="let book of bookslist | filter:objectToSearch;let i = index;">
+        <tr *ngFor="let book of bookslist$ | filter:objectToSearch;let i = index;">
 
             <input #self class="form-check-input" type="checkbox"  [value]="book.id" id="BookIdInput" (change)="changeCheckboxList(self)">
 
